--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-autoprefixer": "^0.7.3",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-compass": "^1.0.3",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-copy": "^0.5.0",
@@ -25,6 +26,7 @@
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
     "jasmine-core": "^2.3.4",
+    "jit-grunt": "^0.9.1",
     "jshint-stylish": "^0.2.0",
     "karma": "^0.12.37",
     "karma-jasmine": "^0.3.5",
