--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-touch": "^1.3.0",
     "bootstrap": "~3.3.5",
     "Font-Awesome": "~4.4.0",
-    "ngInfiniteScroll": "1.0.0"
+    "ngInfiniteScroll": "1.0.0",
+    "angular-ui-router": "~0.2.15"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
